Day 4/workshop 4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: wordpress-ing
    labels:
        name: wordpress-ing
    annotations:
        nginx.ingress.kubernetes.io/limit-rps: "20"
        nginx.ingress.kubernetes.io/limit-rpm: "300"
        nginx.ingress.kubernetes.io/limit-connections: "10"
spec:
    ingressClassName: nginx #documented, should always be nginx if we're running nginx
    rules:
        - host: mp-143.244.208.71.nip.io
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                      service:
                          name: wordpress-app-svc
                          port: 
                              number: 80
